tests/course/errors/UpdateErrorEmpty.bru
meta {
  name: UpdateErrorEmpty
  type: http
  seq: 8
}

patch {
  url: {{baseUrl}}/courses/{{courseToUpdate}}
  body: json
  auth: none
}

body:json {
  {
    "name": "",
    "provider": "",
    "category": "",
    "duration": 0,
    "verifyUrl": ""
  }
}

assert {
  res.status: eq 400
}
